--- a/docs/.vitepress/theme/index.css
+++ b/docs/.vitepress/theme/index.css
@@ -1,3 +1,9 @@
+@import 'tailwindcss';
+
+@layer theme, base, components, utilities;
+
+@custom-variant dark (&:where(.dark, .dark *));
+
 button,
 input,
 optgroup,
@@ -6,11 +12,6 @@ textarea {
 	/* border: 0 by default in vitepress removes all border for border class */
 	border: inherit;
 }
-
-/* .vitepress/theme/custom.css */
-@layer theme, base, components, utilities;
-
-@custom-variant dark (&:where(.dark, .dark *));
 
 /**
  * Customize default theme styling by overriding CSS variables:
