--- a/src/bamboo.css
+++ b/src/bamboo.css
@@ -1,3 +1,17 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family:
+		ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+		'Noto Color Emoji';
+}
+
+html {
+	font-size: 0.875rem;
+	line-height: calc(1.25 / 0.875);
+}
+
 :root {
 	/** Red */
 	--red-50: oklch(0.971 0.013 17.38);
