refactor: text position updates

--- a/docs/.vitepress/theme/index.css
+++ b/docs/.vitepress/theme/index.css
@@ -7,6 +7,10 @@ textarea {
 	border: inherit;
 }
 
+p {
+	margin: inherit !important;
+}
+
 /**
  * Customize default theme styling by overriding CSS variables:
  * https://github.com/vuejs/vitepress/blob/main/src/client/theme-default/styles/vars.css
