--- a/src/lib.css
+++ b/src/lib.css
@@ -12,8 +12,8 @@
 }
 
 html {
-	font-size: 0.875rem;
-	line-height: calc(1.25 / 0.875);
+	font-size: 1rem;
+	line-height: 1.5;
 }
 
 @media (prefers-reduced-motion: reduce) {
