--- a/packages/bamboo-docs/.vitepress/theme/style.css
+++ b/packages/bamboo-docs/.vitepress/theme/style.css
@@ -41,7 +41,7 @@
  * - `warning`: Used to indicate warning to the users. Used in custom
  *   container, badges, etc.
  *
- * - `danger`: Used to show error, or dangerous message to the users. Used
+ * - `destructive`: Used to show error, or destructiveous message to the users. Used
  *   in custom container, badges, etc.
  * -------------------------------------------------------------------------- */
 
@@ -66,10 +66,10 @@
 	--vp-c-warning-3: var(--vp-c-yellow-3);
 	--vp-c-warning-soft: var(--vp-c-yellow-soft);
 
-	--vp-c-danger-1: var(--vp-c-red-1);
-	--vp-c-danger-2: var(--vp-c-red-2);
-	--vp-c-danger-3: var(--vp-c-red-3);
-	--vp-c-danger-soft: var(--vp-c-red-soft);
+	--vp-c-destructive-1: var(--vp-c-red-1);
+	--vp-c-destructive-2: var(--vp-c-red-2);
+	--vp-c-destructive-3: var(--vp-c-red-3);
+	--vp-c-destructive-soft: var(--vp-c-red-soft);
 }
 
 /**
